edus notes user address
